--- a/.github/workflows/main4.yml
+++ b/.github/workflows/main4.yml
@@ -21,5 +21,8 @@ jobs:
       - name: Get the artifact and upload on github repo
         uses: actions/upload-artifact@v4
         with:
-          name: my-artifact
-          path: /tmp/world.txt
+          name: java-example-artifact
+          path: /home/runner/work/MavenBuild-SL/target/java-example.war
+        # with:
+        #  name: my-artifact
+         # path: /tmp/world.txt
