--- a/.github/workflows/main4.yml
+++ b/.github/workflows/main4.yml
@@ -1,28 +1,19 @@
-name: CI using maven and Jenkins
+
+name: CICD using Maven and tomcat
 on:
-  push:
-  workflow_dispatch:
+ push:  # run when there is commit to repo
+ workflow_dispatch:  # run manually
 jobs:
-  buildJob:
-    runs-on: ubuntu-latest
-    steps:
-      - name: checkout code on ubuntu server
-        uses: actions/checkout@v4
-      - name: Install Java and Maven on the ubuntu server
-        uses: actions/setup-java@v4
-        with:
-          distribution: "temurin"
-          java-version: "11"
-          cache: 'maven'
-      - name: Test the code3
-        run: mvn test
-      - name: Build the code
-        run : mvn package
-      - name: Get the artifact and upload on github repo
-        uses: actions/upload-artifact@v4
-        with:
-          name: java-example-artifact
-          path: /home/runner/work/MavenBuild-SL/target/java-example.war
-        # with:
-        #  name: my-artifact
-         # path: /tmp/world.txt
+ CICDjob:
+   runs-on: ubuntu-latest
+   steps:
+    - name: Clone the repo on ubuntu server
+      uses: actions/checkout@v4
+    - name: Install Java and maven on ubuntu server
+      uses: actions/setup-java@v4
+      with:
+       distribution: 'temurin'
+       java-version: '11'
+       cache: 'maven'
+    - name: Build the code 
+      run: mvn package
